--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@apollo/server": "^4.11.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "graphql": "^16.9.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.3",
-    "xlsx": "^0.18.5"
+    "@apollo/server": "4.11.0",
+    "apollo-server": "3.13.0",
+    "bcrypt": "5.1.1",
+    "bcryptjs": "2.4.3",
+    "dotenv": "16.4.5",
+    "graphql": "16.9.0",
+    "jsonwebtoken": "9.0.2",
+    "mysql2": "3.11.3",
+    "sequelize": "6.37.4",
+    "uuid": "10.0.0",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express-serve-static-core": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.2",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
+    "@types/bcrypt": "5.0.2",
+    "@types/bcryptjs": "2.4.6",
+    "@types/express-serve-static-core": "5.0.0",
+    "@types/jsonwebtoken": "9.0.7",
+    "@types/node": "22.7.2",
+    "@types/uuid": "10.0.0",
+    "ts-node": "10.9.2",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.6.2"
   }
 }
