--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "graphql": "16.9.0",
+    "graphql-http": "1.22.1",
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.3",
     "sequelize": "6.37.4",
